--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,11 @@ p {
     text-align: center;
 }
 
-.footer h2 {
+.footer h3 {
     font-size: 20px;
 }
+
+/* footer hidden as to match brief for now*/
+footer {
+    display: none;
+} 
